Set Topics routes list, add, info by id & documentation
