# config/swagger.json
@@ -16,12 +16,12 @@
         "schemas":{
             "Topic": {
                 "type": "object",
-                "required": ["topic", "desciption", "color"],
+                "required": ["topic", "desciption", "hexcolor"],
                 "properties": {
                     "id": { "type": "integer", "format": "int32" },
                     "topic": { "type": "string" }, 
                     "desciption": { "type": "string" },
-                    "color": { "type": "string" },
+                    "hexcolor": { "type": "string" },
                     "status": { "type": "boolean", "default": "1" },
                     "createdAt": { "type": "string", "format": "date-time" },
                     "updatedAt": { "type": "string", "format": "date-time" }
@@ -173,6 +173,226 @@
                         }
                     }
                 }
+            }
+        },
+        "/topics": {
+            "get": {
+                "tags": ["Topics"],
+                "description": "<h2>Get Topics List</h2><br><p>Role required: <strong>Admin</strong></p>",
+                "responses": {
+                    "200": {
+                        "description": "Topics List",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#components/schemas/Topic"
+                                },
+                                "examples": {
+                                    "User List": [
+                                        {
+                                            "id": "1",
+                                            "topic": "HTML",
+                                            "description": "Crie a estrutura de um Site",
+                                            "hexcolor": "#6495ED",
+                                            "status": "1"
+                                        },
+                                        {
+                                            "id": "2",
+                                            "topic": "CSS",
+                                            "description": "Altere a aparência de um Site",
+                                            "hexcolor": "#C0392B",
+                                            "status": "1"
+                                        }
+                                    ]
+                                }
+                            },
+                            "text/plain": {
+                                "schema": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Error",
+                        "content": {
+                            "text/plain": {
+                                "schema": {
+                                    "type": "string"
+                                },
+                                "examples": {
+                                    "Error": {
+                                        "value": "Error"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Error",
+                        "content": {
+                            "text/plain": {
+                                "schema": {
+                                    "type": "string"
+                                },
+                                "examples": {
+                                    "Unauthorized": {
+                                        "value": "Invalid Token"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [{
+                    "bearer": []
+                }]
+            },
+            "post": {
+                "tags": ["Topics"],
+                "description": "<h2>Create new Topic</h2><br><p>Role required: <strong>Admin</strong></p>",
+                "requestBody": {
+                    "content": {
+                        "application/json" : {
+                            "schema": {
+                                "$ref": "#components/schemas/Topic"
+                            },
+                            "examples": {
+                                "Topic": {
+                                    "value": {
+                                        "topic":"New Topic", 
+                                        "description":"Net Topic description", 
+                                        "hexcolor": "#F1C40F"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "New Topic",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#components/schemas/Topic"
+                                }
+                            },
+                            "text/plain": {
+                                "schema": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Error",
+                        "content": {
+                            "text/plain": {
+                                "schema": {
+                                    "type": "string"
+                                },
+                                "examples": {
+                                    "Error": {
+                                        "value": "Error"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Error",
+                        "content": {
+                            "text/plain": {
+                                "schema": {
+                                    "type": "string"
+                                },
+                                "examples": {
+                                    "Unauthorized": {
+                                        "value": "Invalid Token"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [{
+                    "bearer": []
+                }]
+            }
+        },
+        "/topics/{id}": {
+            "get": {
+                "tags": ["Topics"],
+                "description": "Get Topic Info by Id<br>Role required Admin",
+                "parameters": [{
+                    "name": "id",
+                    "in": "path",
+                    "description": "Topic Id",
+                    "required": true,
+                    "schema": {
+                        "type": "integer"
+                    }
+                }],
+                "responses": {
+                    "200": {
+                        "description": "Topic Info",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#components/schemas/Topic"
+                                },
+                                "examples": { 
+                                    "Topic": {
+                                        "id": "1",
+                                        "Topic": "HTML",
+                                        "email": "Crie a estrutura de um Site",
+                                        "hexcolor": "#6495ED",
+                                        "status": "1"
+                                    }
+                                }
+                            },
+                            "text/plain": {
+                                "schema": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Error",
+                        "content": {
+                            "text/plain": {
+                                "schema": {
+                                    "type": "string"
+                                },
+                                "examples": {
+                                    "Error": {
+                                        "value": "Error"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Error",
+                        "content": {
+                            "text/plain": {
+                                "schema": {
+                                    "type": "string"
+                                },
+                                "examples": {
+                                    "Unauthorized": {
+                                        "value": "Invalid Token"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [{
+                    "bearer": []
+                }]
             }
         },
         "/users": {
